- Report comms parameters used for each test
- Update requirement on domhub-tools (201) in RPM
- If tcal succeeds but data fails quality check during quadtool,
  don't fail DOM, but report DOM as POOR.
- Allow quadtool to handle negative DOR current values
- Require each echo-test to take < 15 minutes.  If configboot exceeds
  the limit, tag DOM as POOR.  If any other exceeds, tag as BAD.

============================================================================

V00-01-01  11/10/05
Requires: domhub-tools 101 or greater
- Make readwrite show detailed dumps of sent/recv'd msgs
  when error occurs
- Add -w option to readwrite which causes readwrite to wait 3
  seconds for any stale data to come through before starting
  echotest
- Change quadtool to use readwrite -w for echotests
- Have quadtool warn user if quadtool is already running 
  (heavy CPU load can influence RESENT/BADSEQ measurements)
- Increase echo-loop timeout to handle DOMs with packet losses
- Put tcal checks into quadtool

============================================================================

V00-01-00  9/27/05
- First implementation of "quadtool" script.
  See http://docushare.icecube.wisc.edu/docushare/dsweb/Get/Document-16941/
- Fixed spurious readgps error message on control-C 

============================================================================

V00-00-13  9/27/05
- Add so-called 'domapp_stagedtests' mode to moat where, if available, the
  domapp FPGA is tested for comms, rather than the test FPGA.  
  Save_tcal_stagedtests uses the domapp FPGA, if available.
- Change default times to 2 minutes each (configboot, domapp, stf, domapp
  saving tcal data)
- Add 'shortmoat' script for running short tests in each of the four modes

============================================================================

V00-00-12  9/13/05
- Let GPS time string collection continue when dt != 20,000,000

============================================================================
